--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,18 +21,35 @@ jobs:
 
       - name: Compile
         run: go build -o super-migrator-9000 main.go
-        
+
       - name: Run tests
-        run: go test bugz/*.go 
-        
+        run: go test bugz/*.go
+
       - name: Download Bugs
         run: ./super-migrator-9000 bugzilla-download-bugs
+        env:
+          BUGZILLA_LOGIN: ${{ secrets.BUGZILLA_LOGIN }}
+          BUGZILLA_PASSWORD: ${{ secrets.BUGZILLA_PASSWORD }}
 
       - name: Download Comments
         run: ./super-migrator-9000 bugzilla-download-comments
+        env:
+          BUGZILLA_LOGIN: ${{ secrets.BUGZILLA_LOGIN }}
+          BUGZILLA_PASSWORD: ${{ secrets.BUGZILLA_PASSWORD }}
 
       - name: Download Attachments
         run: ./super-migrator-9000 bugzilla-download-attachments
+        env:
+          BUGZILLA_LOGIN: ${{ secrets.BUGZILLA_LOGIN }}
+          BUGZILLA_PASSWORD: ${{ secrets.BUGZILLA_PASSWORD }}
 
       - name: Download Users
         run: ./super-migrator-9000 bugzilla-download-users
+        env:
+          BUGZILLA_LOGIN: ${{ secrets.BUGZILLA_LOGIN }}
+          BUGZILLA_PASSWORD: ${{ secrets.BUGZILLA_PASSWORD }}
+
+
+
+
+
